Fixed a bug in event list that caused the table to break into another row every 9n child

--- a/Sogeti.Capstone.Web/Sogeti.Capstone.Web/Content/Site.css
+++ b/Sogeti.Capstone.Web/Sogeti.Capstone.Web/Content/Site.css
@@ -324,6 +324,12 @@ body > div.body-content > footer,
     background-color: #373737;
 }
 
+#eventsPartial > div::before,
+#eventsPartial > div::after {
+    display: inherit;
+    clear: none;
+}
+
 @media (max-width : 815px) {
     .footer-left {
         text-align: center;
